# suntzu

./: README.md  board.py  game.py  game_gui.py  main.py  pyproject.toml  test_game.py
