[tool.poetry]
name = "suntzu"
version = "0.1.0"
description = ""
authors = ["Mikhail Kozlov <wmikkoz@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
uuid = "^1.30"
pygame-widgets = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
